agent-kube-ops/templates/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __APP_NAME__
  namespace: __NAMESPACE__
  labels:
    app: __APP_NAME__
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: __APP_NAME__
